--- a/src/components/shared/Button.astro
+++ b/src/components/shared/Button.astro
@@ -1,9 +1,9 @@
 ---
 interface Props {
-  link: string;
-  buttonText: string;
-  classes: string;
-  target?: string;
+	link: string;
+	buttonText: string;
+	classes: string;
+	target?: string;
 }
 
 const { link, buttonText, classes, target = "_self" } = Astro.props;
@@ -12,66 +12,71 @@ const { link, buttonText, classes, target = "_self" } = Astro.props;
 <a target={target} href={link} class={classes}>{buttonText}</a>
 
 <style lang="scss">
-  .Button {
-    display: flex;
-    text-decoration: none;
-    border: solid 2px var(--uiBrown);
-    color: white;
-    transition: all 0.1s ease;
-    width: fit-content;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 800;
-    border-radius: 2em 2em 2em 2em;
+	.Button {
+		display: flex;
+		text-decoration: none;
+		border: solid 2px var(--uiBrown);
+		color: white;
+		transition: all 0.1s ease;
+		width: fit-content;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		text-transform: uppercase;
+		font-weight: 800;
+		border-radius: 2em 2em 2em 2em;
 
-    &:hover {
-      border: solid 2px var(--uiYellow);
-      scale: 1.05;
-    }
+		&:hover {
+			border: solid 2px var(--uiYellow);
+			scale: 1.05;
+		}
 
-    &:active {
-      scale: 0.95;
-      box-shadow: rgb(96, 11, 104) 3px 3px 20px;
-    }
-  }
+		&:active {
+			scale: 0.95;
+			box-shadow: rgb(96, 11, 104) 3px 3px 20px;
+		}
+	}
 
-  .Button-sm {
-    padding: 0.9em 1.3em;
-    font-size: 0.7rem;
-  }
+	.Button-primary {
+		background-color: var(--uiYellow);
+		color: black;
+	}
 
-  .Button-md {
-    padding: 1em 1.5em;
-    font-size: 1rem;
-  }
+	.Button-sm {
+		padding: 0.9em 1.3em;
+		font-size: 0.7rem;
+	}
 
-  .Button-lg {
-    padding: 1.1em 2em;
-    font-size: 1.1rem;
-  }
+	.Button-md {
+		padding: 1em 1.5em;
+		font-size: 1rem;
+	}
 
-  .Button-center {
-    align-self: center;
-    justify-self: center;
-  }
+	.Button-lg {
+		padding: 1.1em 2em;
+		font-size: 1.1rem;
+	}
 
-  .Button-100 {
-    width: 100%;
-  }
+	.Button-center {
+		align-self: center;
+		justify-self: center;
+	}
 
-  .Button-mt {
-    margin: 2em 0;
-  }
+	.Button-100 {
+		width: 100%;
+	}
 
-  @media screen and (max-width: 590px) {
-    .Button {
-	  width: 100%;
-    }
-    .Button-md {
-      padding: 0.7em 1em;
-      font-size: 0.7rem;
-    }
-  }
+	.Button-mt {
+		margin: 2em 0;
+	}
+
+	@media screen and (max-width: 590px) {
+		.Button {
+			width: 100%;
+		}
+		.Button-md {
+			padding: 0.7em 1em;
+			font-size: 0.7rem;
+		}
+	}
 </style>
