--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,23 +2,21 @@
 import { Image } from "astro:assets";
 import AboutMe from "../assets/images/aboutMe-transformed.jpeg";
 import Layout from "../layouts/Layout.astro";
+import SectionPage from "../components/SectionPage.astro";
 ---
 
 <Layout
 	title="Acerca de mí"
 	description="Domingo Uribe Luthier. Especialista en fabricación de quenas de alto nivel para profesionales y público en general.">
-	<section class="About">
+	<SectionPage title="Acerca de mí">
 		<div class="Container">
-			<div class="Page-picture">
-				<Image
-					src={AboutMe}
-					alt={"Foto de mí junto a un torno mecánico"}
-					width={1200}
-					class="AvatarImage"
-				/>
-			</div>
+			<Image
+				src={AboutMe}
+				alt={"Foto de mí junto a un torno mecánico"}
+				width={1200}
+				class="AvatarImage"
+			/>
 			<article class="Article">
-				<h2 class="Page-title">Acerca de mí</h2>
 				<p class="Page-description">
 					¡Hola! Soy Domingo Uribe, luthier especializado y dedicado al
 					desarrollo continuo de la quena. Fabrico y vendo directamente mis
@@ -327,20 +325,15 @@ import Layout from "../layouts/Layout.astro";
 				</p>
 			</article>
 		</div>
-	</section>
+	</SectionPage>
 </Layout>
 
 <style lang="scss">
-	.Page-picture {
+	.AvatarImage {
 		width: 100%;
-		height: 250px;
-		overflow: hidden;
-
-		img {
-			width: 100%;
-			height: auto;
-			object-fit: contain;
-		}
+		height: auto;
+		object-fit: cover;
+		aspect-ratio: 19/9;
 	}
 
 	.Article p {
