Cumulative Layout Shift issues fixed

--- a/src/components/BannerLink.astro
+++ b/src/components/BannerLink.astro
@@ -26,6 +26,7 @@ const { title, text } = Astro.props;
 		flex: 1;
 		gap: 1em;
 		border: solid 1.5px var(--uiGray);
+		height: fit-content;
 
 		&-title {
 			margin: 0;
