--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,22 +1,18 @@
 ---
-import WhatsApp from "../components/social-icons/WhatsApp.astro";
+import SectionPage from "../components/SectionPage.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout
 	title="Contáctame"
 	description="Mis datos de contacto oficiales y siempre actualizados">
-	<section class="Contact">
-		<div class="Container">
-			<article class="Article">
-				<h2>Contáctame</h2>
-				<p>
-					Escríbeme directamente a mi número de WhatsApp, y encuéntrame y
-					sígueme en mis Redes Sociales. Solo da click en cualquier ícono de
-					abajo
-				</p>
-			</article>
-		</div>
-	</section>
+	<SectionPage title="Contáctame">
+		<article class="Article">
+			<p>Mis datos de contacto oficiales y siempre actualizados</p>
+			<p>
+				Escríbeme directamente a mi número de WhatsApp, y encuéntrame y sígueme
+				en mis Redes Sociales. Solo da click en cualquier ícono de abajo
+			</p>
+		</article>
+	</SectionPage>
 </Layout>
-
