--- a/src/components/shared/Button.astro
+++ b/src/components/shared/Button.astro
@@ -40,6 +40,7 @@ const { link, buttonText, classes, target = "_self" } = Astro.props;
 	.Button-primary {
 		background-color: var(--uiYellow);
 		color: black;
+		border: none;
 	}
 
 	.Button-sm {
