--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,30 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import LayoutBlog from "../layouts/LayoutBlog.astro";
+import PostPreviewCard from "../components/shared/PostPreviewCard.astro";
+
+const posts = await Astro.glob("./blog/*.md");
 ---
 
-<Layout
-	title="Blog - Mis artículos sobre la quena, apreciación de los sonidos, y artes en general"
+<LayoutBlog
+	title="Blog - Mis artículos sobre la quena"
 	description="Lee aquí todos mis contenidos acerca de la quena, música y arte en general">
-	<section class="About">
-		<div class="Container">
-			<article class="Article">
-				<h2>Blog - Lee mis artículos sobre luthería</h2>
-				<p>
-					En esta sección podrás leer todo lo que he escrito acerca de la quena
-				</p>
-			</article>
-		</div>
-	</section>
-</Layout>
+	<h1 class="Section-title">Blog</h1>
+	<div class="Posts">
+		{posts.map((post) => <PostPreviewCard post={post} />)}
+	</div>
+</LayoutBlog>
+
+<style lang="scss">
+	.Post-full {
+		display: flex;
+		flex: 1;
+	}
+	.Posts {
+		display: grid;
+		gap: 2em;
+		grid-auto-rows: min-content;
+		grid-template-columns: repeat(auto-fit, minmax(min(100%, 18em), 1fr));
+		grid-auto-flow: dense;
+		height: auto;
+	}
+</style>
