--- a/src/components/shared/Navigation.astro
+++ b/src/components/shared/Navigation.astro
@@ -6,7 +6,7 @@
 	<a href="/" class="Navigation-link">Home</a>
 	<a href="/about" class="Navigation-link">Acerca de mí</a>
 	<a href="/catalog" class="Navigation-link">Catálogo</a>
-	<a href="/education" class="Navigation-link">Cursos y Masterclass</a>
+	<!-- <a href="/education" class="Navigation-link">Cursos y Masterclass</a> -->
 	<a href="/blog" class="Navigation-link">Blog</a>
 	<a href="/contact" class="Navigation-link">Contáctame</a>
 </nav>
