attempt change post title size

--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -29,6 +29,10 @@ import GoogleAnalytics from "../components/shared/GoogleAnalytics.astro";
 		<style is:global lang="scss">
 			.Post-full img {
 				width: 100%;
+
+			 h1 {
+					font-size: 3rem;
+				}
 			}
 		</style>
 	</body>
