--- a/src/components/shared/PostPreviewCard.astro
+++ b/src/components/shared/PostPreviewCard.astro
@@ -5,9 +5,9 @@ import Button from "../shared/Button.astro";
 
 <article class="Post">
 	<a href={post.url}>
-		<h3 class="Post-title">
+		<h1 class="Post-title">
 			{post.frontmatter.title}
-		</h3>
+		</h1>
 		<img
 			src={post.frontmatter.image.url}
 			alt={post.frontmatter.image.alt}
@@ -28,13 +28,15 @@ import Button from "../shared/Button.astro";
 
 <style lang="scss">
 	.Post {
-		//width: 200px;
 		padding: 1em;
 		background-color: var(--uiGrayMedium);
 		gap: 1em;
 		border-radius: 0.5em;
 
-		h3,
+		&-title {
+			font-size: 1.5rem;
+			line-height: 1.2;
+		}
 		p {
 			margin: 0;
 		}
