--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -141,7 +141,6 @@ main {
         font-weight: 400;
     }
 
-
     .Disclaimer-icon {
         cursor: pointer;
         color: var(--uiYellow);
@@ -164,4 +163,9 @@ section {
 
 article {
     flex: 1
+}
+
+iframe {
+    aspect-ratio: 19 / 9;
+    width: 100%;
 }
