--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
-import AboutMe from "../assets/images/aboutMe-transformed.jpeg";
-import Layout from "../layouts/Layout.astro";
-import SectionPage from "../components/SectionPage.astro";
+import AboutMe from "@/assets/images/aboutMe-transformed.jpeg";
+import Layout from "@/layouts/Layout.astro";
+import SectionPage from "@/components/SectionPage.astro";
 ---
 
 <Layout
