--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
-import LayoutBlog from "../layouts/LayoutBlog.astro";
-import PostPreviewCard from "../components/shared/PostPreviewCard.astro";
+import LayoutBlog from "@/layouts/LayoutBlog.astro";
+import PostPreviewCard from "@/components/shared/PostPreviewCard.astro";
 
 const posts = await Astro.glob("./blog/*.md");
 ---
