--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
-import SectionPage from "../components/SectionPage.astro";
-import Layout from "../layouts/Layout.astro";
+import SectionPage from "@/components/SectionPage.astro";
+import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout
