--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Hero from "../components/Hero.astro";
-import SectionPage from "../components/SectionPage.astro";
-import Offering from "../components/Offering.astro";
-import Button from "../components/shared/Button.astro";
+import Layout from "@/layouts/Layout.astro";
+import Hero from "@/components/Hero.astro";
+import SectionPage from "@/components/SectionPage.astro";
+import Offering from "@/components/Offering.astro";
+import Button from "@/components/shared/Button.astro";
 ---
 
 <Layout
@@ -24,7 +24,8 @@ import Button from "../components/shared/Button.astro";
 				altText="Quena de lujo en madera de ébano africano"
 				title="Quena de lujo en madera de ébano africano"
 				description="Quena profesional fabricada en madera de ébano africano de Gabón"
-				clpPrice={"260.000"}>
+				clpPrice={"260.000"}
+				usdPrice={"345"}>
 				<Button
 					classes="Button Button-sm"
 					link="/contact"
@@ -43,7 +44,8 @@ import Button from "../components/shared/Button.astro";
 				altText="Quena de lujo en madera de cocobolo"
 				title="Quena madera de cocobolo"
 				description="Quena profesional fabricada en madera de cocobolo"
-				clpPrice={"260.000"}>
+				clpPrice={"260.000"}
+				usdPrice={"345"}>
 				<Button
 					classes="Button Button-sm"
 					link="/contact"
@@ -62,7 +64,8 @@ import Button from "../components/shared/Button.astro";
 				altText="Quena de lujo en madera de ébano asiático"
 				title="Quena madera de ébano asiático"
 				description="Quena profesional fabricada en madera de ébano asiático"
-				clpPrice={"290.000"}>
+				clpPrice={"290.000"}
+				usdPrice="375">
 				<Button
 					classes="Button Button-sm"
 					link="/contact"
