--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import "../styles/global.scss";
-import BaseHead from "../components/shared/BaseHead.astro";
-import Header from "../components/shared/Header.astro";
-import Footer from "../components/shared/Footer.astro";
+import "@/styles/global.scss";
+import BaseHead from "@/components/shared/BaseHead.astro";
+import Header from "@/components/shared/Header.astro";
+import Footer from "@/components/shared/Footer.astro";
 // Supports weights 100-900
 import "@fontsource-variable/urbanist";
 interface Props {
@@ -12,7 +12,7 @@ interface Props {
 
 const { title, description } = Astro.props;
 import { fade } from "astro:transitions";
-import GoogleAnalytics from "../components/shared/GoogleAnalytics.astro";
+import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
 <!doctype html>
