--- a/src/layouts/LayoutBlog.astro
+++ b/src/layouts/LayoutBlog.astro
@@ -1,13 +1,12 @@
 ---
-import "../styles/global.scss";
-import BaseHead from "../components/shared/BaseHead.astro";
-import Header from "../components/shared/Header.astro";
-import Footer from "../components/shared/Footer.astro";
+import "@/styles/global.scss";
+import BaseHead from "@/components/shared/BaseHead.astro";
+import Header from "@/components/shared/Header.astro";
+import Footer from "@/components/shared/Footer.astro";
 import "@fontsource-variable/urbanist";
-
 const { title, description, frontmatter } = Astro.props;
 import { fade } from "astro:transitions";
-import GoogleAnalytics from "../components/shared/GoogleAnalytics.astro";
+import GoogleAnalytics from "@/components/shared/GoogleAnalytics.astro";
 ---
 
 <!doctype html>
@@ -15,6 +14,15 @@ import GoogleAnalytics from "../components/shared/GoogleAnalytics.astro";
 	<head>
 		<GoogleAnalytics />
 		<BaseHead title={frontmatter?.title ?? title} description={description} />
+		<style is:global lang="scss">
+			.Post-full img {
+				width: 100%;
+
+				h1 {
+					font-size: 3rem;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<Header />
@@ -26,14 +34,5 @@ import GoogleAnalytics from "../components/shared/GoogleAnalytics.astro";
 			</div>
 		</main>
 		<Footer />
-		<style is:global lang="scss">
-			.Post-full img {
-				width: 100%;
-
-			 h1 {
-					font-size: 3rem;
-				}
-			}
-		</style>
 	</body>
 </html>
