--- a/src/pages/education.astro
+++ b/src/pages/education.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import BannerLink from "../components/BannerLink.astro";
-import Button from "../components/shared/Button.astro";
-import SectionPage from "../components/SectionPage.astro";
+import Layout from "@/layouts/Layout.astro";
+import BannerLink from "@/components/BannerLink.astro";
+import Button from "@/components/shared/Button.astro";
+import SectionPage from "@/components/SectionPage.astro";
 ---
 
 <Layout
@@ -45,7 +45,7 @@ import SectionPage from "../components/SectionPage.astro";
 	.Banners {
 		display: grid;
 		gap: 2em;
-		grid-auto-rows:auto;
+		grid-auto-rows: auto;
 		grid-template-columns: repeat(auto-fit, minmax(min(100%, 15em), 1fr));
 		grid-auto-flow: dense;
 		height: auto;
