offering and package json updated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "@/components/Hero.astro";
 import SectionPage from "@/components/SectionPage.astro";
 import Offering from "@/components/Offering.astro";
 import Button from "@/components/shared/Button.astro";
+import OfferingTest from "@/components/OfferingTest.astro";
 ---
 
 <Layout
